[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Icons/save_file_white.png" type="Texture2D" id=1]
[ext_resource path="res://Assets/Icons/open_file_white.png" type="Texture2D" id=2]
[ext_resource path="res://UI/UIToolbar.gd" type="Script" id=3]
[ext_resource path="res://Assets/Icons/new_file_white.png" type="Texture2D" id=4]
[ext_resource path="res://Assets/Icons/clear_canvas_white.png" type="Texture2D" id=5]
[ext_resource path="res://Assets/Icons/redo_white.png" type="Texture2D" id=6]
[ext_resource path="res://Assets/Icons/undo_white.png" type="Texture2D" id=7]
[ext_resource path="res://Assets/Icons/brush_white.png" type="Texture2D" id=8]
[ext_resource path="res://Assets/Icons/eraser_white.png" type="Texture2D" id=9]
[ext_resource path="res://Assets/Icons/select_white.png" type="Texture2D" id=10]
[ext_resource path="res://Assets/Icons/drag_tool_white.png" type="Texture2D" id=11]
[ext_resource path="res://Assets/Fonts/font_11.tres" type="FontFile" id=14]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.207843, 0.211765, 0.227451, 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxLine" id=3]
color = Color( 0.619608, 0.619608, 0.619608, 1 )
grow_begin = -10.0
grow_end = -10.0
vertical = true

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 0.298039, 0.298039, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="UIToolbar" type="PanelContainer"]
anchor_right = 1.0
offset_bottom = 40.0
custom_minimum_size = Vector2( 0, 40 )
theme_override_styles/panel = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_right = 1920.0
offset_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
offset_right = 4.0
offset_bottom = 40.0
theme_override_styles/separator = SubResource( 2 )

[node name="NewFileButton" type="TextureButton" parent="HBoxContainer"]
offset_left = 16.0
offset_top = 11.0
offset_right = 34.0
offset_bottom = 29.0
tooltip_text = "Create New File"
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 4 )

[node name="OpenFileButton" type="TextureButton" parent="HBoxContainer"]
offset_left = 46.0
offset_top = 11.0
offset_right = 64.0
offset_bottom = 29.0
tooltip_text = "Open File"
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 2 )

[node name="SaveFileButton" type="TextureButton" parent="HBoxContainer"]
offset_left = 76.0
offset_top = 11.0
offset_right = 94.0
offset_bottom = 29.0
tooltip_text = "Save File"
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 1 )

[node name="ClearCanvasButton" type="TextureButton" parent="HBoxContainer"]
offset_left = 106.0
offset_top = 11.0
offset_right = 124.0
offset_bottom = 29.0
tooltip_text = "Clear Canvas"
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 5 )

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
offset_left = 136.0
offset_right = 140.0
offset_bottom = 40.0
theme_override_styles/separator = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UndoButton" type="TextureButton" parent="HBoxContainer"]
offset_left = 152.0
offset_top = 11.0
offset_right = 170.0
offset_bottom = 29.0
tooltip_text = "Undo Action"
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 7 )

[node name="RedoButton" type="TextureButton" parent="HBoxContainer"]
offset_left = 182.0
offset_top = 11.0
offset_right = 200.0
offset_bottom = 29.0
tooltip_text = "Redo Action"
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 6 )

[node name="VSeparator3" type="VSeparator" parent="HBoxContainer"]
offset_left = 212.0
offset_right = 216.0
offset_bottom = 40.0
theme_override_styles/separator = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BrushButton" type="TextureButton" parent="HBoxContainer"]
offset_left = 228.0
offset_top = 11.0
offset_right = 246.0
offset_bottom = 29.0
tooltip_text = "Brush Tool"
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 8 )

[node name="EraserButton" type="TextureButton" parent="HBoxContainer"]
offset_left = 258.0
offset_top = 11.0
offset_right = 276.0
offset_bottom = 29.0
tooltip_text = "Eraser Tool"
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 9 )

[node name="SelectionButton" type="TextureButton" parent="HBoxContainer"]
offset_left = 288.0
offset_top = 11.0
offset_right = 306.0
offset_bottom = 29.0
tooltip_text = "Selection Tool"
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 10 )

[node name="DragToolButton" type="TextureButton" parent="HBoxContainer"]
offset_left = 318.0
offset_top = 11.0
offset_right = 336.0
offset_bottom = 29.0
tooltip_text = "Drag Tool"
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 11 )

[node name="VSeparator4" type="VSeparator" parent="HBoxContainer"]
offset_left = 348.0
offset_right = 352.0
offset_bottom = 40.0
theme_override_styles/separator = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorButton" type="Button" parent="HBoxContainer"]
offset_left = 364.0
offset_top = 10.0
offset_right = 424.0
offset_bottom = 30.0
custom_minimum_size = Vector2( 60, 20 )
size_flags_vertical = 4
theme_override_styles/hover = SubResource( 4 )
theme_override_styles/pressed = SubResource( 4 )
theme_override_styles/focus = SubResource( 4 )
theme_override_styles/disabled = SubResource( 4 )
theme_override_styles/normal = SubResource( 4 )
theme_override_fonts/font = ExtResource( 14 )
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_hover_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_pressed_color = Color( 1, 1, 1, 1 )
text = "ff0000"
__meta__ = {
"_edit_group_": true
}

[node name="BrushSizeSlider" type="HSlider" parent="HBoxContainer"]
offset_left = 436.0
offset_top = 10.0
offset_right = 556.0
offset_bottom = 30.0
custom_minimum_size = Vector2( 120, 20 )
size_flags_horizontal = 4
size_flags_vertical = 4
min_value = 1.0
max_value = 50.0
value = 5.0

[node name="BrushSizeLabel" type="Label" parent="HBoxContainer"]
offset_left = 568.0
offset_top = 13.0
offset_right = 580.0
offset_bottom = 27.0
theme_override_fonts/font = ExtResource( 14 )
text = "12"

[connection signal="mouse_entered" from="HBoxContainer/NewFileButton" to="." method="_on_NewFileButton_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/NewFileButton" to="." method="_on_NewFileButton_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/NewFileButton" to="." method="_on_NewFileButton_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/OpenFileButton" to="." method="_on_OpenFileButton_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/OpenFileButton" to="." method="_on_OpenFileButton_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/OpenFileButton" to="." method="_on_OpenFileButton_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/SaveFileButton" to="." method="_on_SaveFileButton_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/SaveFileButton" to="." method="_on_SaveFileButton_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/SaveFileButton" to="." method="_on_SaveFileButton_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/ClearCanvasButton" to="." method="_on_ClearCanvasButton_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/ClearCanvasButton" to="." method="_on_ClearCanvasButton_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/ClearCanvasButton" to="." method="_on_ClearCanvasButton_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/UndoButton" to="." method="_on_UndoButton_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/UndoButton" to="." method="_on_UndoButton_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/UndoButton" to="." method="_on_UndoButton_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/RedoButton" to="." method="_on_RedoButton_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/RedoButton" to="." method="_on_RedoButton_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/RedoButton" to="." method="_on_RedoButton_pressed"]
[connection signal="pressed" from="HBoxContainer/ColorButton" to="." method="_on_ColorButton_pressed"]
[connection signal="value_changed" from="HBoxContainer/BrushSizeSlider" to="." method="_on_BrushSizeSlider_value_changed"]
